--- a/HW2-2.ipynb
+++ b/HW2-2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9uBdBASw7fabbU4xJ580m",
+      "authorship_tag": "ABX9TyNDpq1C0y3kB41HKB9WRVmm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,80 @@
       "cell_type": "code",
       "metadata": {
         "id": "g5e3hXITixB4"
+      },
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from typing import Any\n",
+        "\n",
+        "\n",
+        "__all__ = ['AlexNet', 'alexnet']\n",
+        "\n",
+        "\n",
+        "model_urls = {\n",
+        "    'alexnet': 'https://download.pytorch.org/models/alexnet-owt-4df8aa71.pth',\n",
+        "}\n",
+        "\n",
+        "\n",
+        "class AlexNet(nn.Module):\n",
+        "\n",
+        "    def __init__(self, num_classes: int = 1000) -> None:\n",
+        "        super(AlexNet, self).__init__()\n",
+        "        self.features = nn.Sequential(\n",
+        "            nn.Conv2d(3, 64, kernel_size=11, stride=4, padding=2),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=3, stride=2),\n",
+        "            nn.Conv2d(64, 192, kernel_size=5, padding=2),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=3, stride=2),\n",
+        "            nn.Conv2d(192, 384, kernel_size=3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(384, 256, kernel_size=3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(256, 256, kernel_size=3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=3, stride=2),\n",
+        "        )\n",
+        "        self.avgpool = nn.AdaptiveAvgPool2d((6, 6))\n",
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Dropout(),\n",
+        "            nn.Linear(256 * 6 * 6, 4096),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Dropout(),\n",
+        "            nn.Linear(4096, 4096),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Linear(4096, num_classes),\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+        "        x = self.features(x)\n",
+        "        x = self.avgpool(x)\n",
+        "        x = torch.flatten(x, 1)\n",
+        "        x = self.classifier(x)\n",
+        "        return x\n",
+        "\n",
+        "\n",
+        "def alexnet(pretrained: bool = False, progress: bool = True, **kwargs: Any) -> AlexNet:\n",
+        "    r\"\"\"AlexNet model architecture from the\n",
+        "    `\"One weird trick...\" <https://arxiv.org/abs/1404.5997>`_ paper.\n",
+        "    Args:\n",
+        "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
+        "        progress (bool): If True, displays a progress bar of the download to stderr\n",
+        "    \"\"\"\n",
+        "    model = AlexNet(**kwargs)\n",
+        "    if pretrained:\n",
+        "        state_dict = load_state_dict_from_url(model_urls['alexnet'],\n",
+        "                                              progress=progress)\n",
+        "        model.load_state_dict(state_dict)\n",
+        "    return model"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "erKQKH3FjVKA"
       },
       "source": [
         ""
